[project]
name = "shekels"
version = "1.1.0"
description = "Shekels is a local service which consumes a transactions CSV file downloaded from mint.intuit.com. It conforms this data into a database, and displays it as a searchable table and dashboard of configurable plots in web frontend."
authors = [
    {name = "Alex Braun", email = "alexander.g.braun@gmail.com"},
]
readme = "README.md"
license = "MIT"
keywords = [
    'dashboard', 'data', 'database', 'datastore', 'finance', 'flask', 'json',
    'plotly', 'service'
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "dash>=2.0.0",
    "flasgger",
    "flask",
    "flask-healthz",
    "flask_monitoringdashboard",
    "flask-caching",
    "jinja2",
    "jsoncomment",
    "lunchbox>=0.1.2",
    "numpy",
    "pandas",
    "pandasql",
    "plotly",
    "pyparsing",
    "rolling-pin>=0.4.2",
    "schematics",
    "sqlalchemy<=1.4.46",
    "webcolors",
]

[project.urls]
repository = "https://github.com/theNewFlesh/shekels"
documentation = "https://thenewflesh.github.io/shekels"

[project.scripts]
shekels = "shekels.command:main"

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
lab = [
    "cufflinks",
    "jupyterlab-git>=0.39.3",
    "jupyterlab-henanigans>=0.2.2",
    "jupyterlab-sublime",
    "jupyterlab",
]
dev = [
    "m2r2>=0.3.3.post2",
    "sphinx-autodoc-typehints>=1.22",
    "sphinx-rtd-theme",
    "sphinx>=5.3.0",
]
test = [
    "dash[testing]>=2.0.0",
    "flake8",
    "mypy",
    "percy",
    "pytest-cov",
    "pytest-forked",
    "pytest-xdist",
    "pytest",
    "selenium",
    "types-pyyaml>=6.0.12.1",
    "types-toml>=0.10.8",
]

[tool.pytest.ini_options]
cache_dir = "/home/ubuntu/.pytest_cache"
filterwarnings = [
    # "ignore::UserWarning",
    # "ignore::PendingDeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore:Call to deprecated function",
    "ignore:nx.nx_pydot.to_pydot depends",
    "ignore:distutils Version classes are deprecated",
    "ignore:The --rsyncdir command line",
    "ignore:Jupyter is migrating its paths to use standard platformdirs",
]
markers = [
    "flaky:Flaky test",
]

[tool.coverage.report]
show_missing = true
omit = [
    "*/__init__.py",
    "*/*_test_base.py",
    "*/*_test.py",
    "*/*_tests.py",
    "*/cli.py",
    "*/command.py",
    "*/mock_*.py",
    "*/conftest.py",
]

[tool.mypy]
cache_dir = "/home/ubuntu/.mypy_cache"
python_version = "3.10"
ignore_missing_imports = true
warn_no_return = false
pretty = true
warn_unused_ignores = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
